# kaleidoscope

./: CMakeLists.txt  build.sh
include/: AST.h  Codegen.h  CompilerInstance.h  Lexer.h
src/: AST.cpp  CMakeLists.txt  Codegen.cpp  CompilerInstance.cpp  Lexer.cpp  main.cpp
